Wed May 23 8:23:20 2001  Yamuna Krishnamurthy  <yamuna@cs.wustl.edu>
	
	* ace/QoS/QoS_Session.h: 
	* ace/QoS/QoS_Session_Impl.h: 	
	* ace/QoS/QoS_Session_Impl.cpp: 	

	  Added a method to propagate the rsvp event type to the application.
	
Wed May 23 06:52:44 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/nightlybuilds/builds.lst: Moved the FORTE builds to ace.

Tue May 22 21:57:46 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/nightlybuilds/builds.lst: Added NO_AMI_MESSAGING to the
	  builds.   

Mon May 21 16:37:18 2001  Krishnakumar B  <kitty@cs.wustl.edu>

	* ace/OS.h:
	* ace/Timer_Queue_Adapters.cpp:
	* bin/make_pretty.pl:

	Changed the make_pretty script to remove the false warning on
	SunCC5. Added documentation in the affected files. This fixes
	Bug Id 879.

Sun May 20 08:48:59 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/nightlybuilds/builds.lst: Added FORTE 6.1 to the list.

Sun May 20 07:37:26 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/POSIX_Proactor.cpp: Fixed a compile error with g++.

Sun May 20 01:38:59 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/config-freebsd-pthread.h:
	* ace/POSIX_Proactor.cpp: Applied patches from Russell L. Carter
	  <rcarter@pinyon.org> that introduce FreeBSD 4.3 to AIO
	  (compiling at least).                        [Bug 917]

Sat May 19 10:28:56 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/make_pretty.pl: Ignore the mktemp () messages on Linux.

Fri May 18 20:58:59 2001  Ossama Othman  <ossama@uci.edu>

	* bin/auto_run_tests.lst:

	  Added TAO's security tests to the list of tests to run in the
	  nightly builds.  They will only be run on platforms that support
	  the "SSL" build configuration.

Fri May 18 14:39:31 2001  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-4.x.h: Removed ACE_LACKS_SETSCHED for AIX 4.3.
          Fixes Bugzilla # 47.

        * ace/OS.h: AIX's ACE_THR_PRI_*_{MIN MAX} values are 1 and 127,