@@ -24,10 +24,8 @@ HREF="http://cseng.aw.com/bookdetail.qry?ISBN=0-201-37927-9&ptype=0">Advanced
 Corba Programming with C++</A> by <A
 HREF="http://www.triodia.com/staff/michi-henning.html">Michi
 Henning</A> & <A HREF="http://www.iona.com/hyplan/vinoski/">Steve
-Vinoski</A>.  Likewise, we recommend that you read chapter 6 from the
-<A
-HREF="http://www.theaceorb.com/TAO/Purchase_TAO/purchase_tao.html">TAO
-Developer's Guide</A>.
+Vinoski</A>.  Likewise, we recommend that you read the Error Handling chapter from the
+<A HREF="http://theaceorb.com/buy/index.html">TAO Developer's Guide</A>.
 
 <P><HR><P>
 <h3>Table of Contents</h3>
